--- a/package.xml
+++ b/package.xml
@@ -10,14 +10,14 @@
   <url>https://github.com/NateGyory/SGPR</url>
   <author>Nathaniel Gyory</author>
 
-  <!-- TODO fill in the rest of the depends when you are done -->
   <depend>roscpp</depend>
   <!-- <depend>std_msgs</depend> -->
 
-  <!-- <build_depend>message_generation</build_depend> -->
+  <build_depend>message_generation</build_depend>
 
   <!-- <exec_depend>message_runtime</exec_depend> -->
   <exec_depend>rospy</exec_depend>
+  <exec_depend>message_runtime</exec_depend>
 
   <buildtool_depend>catkin</buildtool_depend>
 </package>
