added SOR and FPS processing to the point cloud

--- a/config/3RScan/config.json
+++ b/config/3RScan/config.json
@@ -4,6 +4,9 @@
   "reference_scans": [
     {
       "scan_id": "4acaebcc-6c10-2a2a-858b-29c7e4fb410d"
+    },
+    {
+      "scan_id": "4e858c81-fd93-2cb4-8469-d9226116b5de"
     }
   ]
 }
